--- a/addons/project/test/project_process.yml
+++ b/addons/project/test/project_process.yml
@@ -1,4 +1,9 @@
 -
+  Test the whole project process with project manager.
+-
+  !context
+    uid: 'res_users_project_manager'
+-
   In order to Test Process of Project Management,
 -
   I create duplicate template.
