[IMP] give access rights in project issue
bzr revid: fka@tinyerp.com-20130314094101-3n3mkiw1msm0vyrc

--- a/addons/project_issue/test/cancel_issue.yml
+++ b/addons/project_issue/test/cancel_issue.yml
@@ -1,4 +1,9 @@
 -
+  Project user can cancelled issue, so let's check data with giving the access rights of user.
+-
+  !context
+    uid: 'res_users_project_issue_user'
+-
   In order to test process of issue tracking in OpenERP, I cancel the unqualified Issue.
 -
   !python {model: project.issue}: |
