--- a/addons/project_issue/test/subscribe_issue.yml
+++ b/addons/project_issue/test/subscribe_issue.yml
@@ -1,5 +1,10 @@
 -
-  In Order to test process of  Issue in OpenERP, Custmer send the issue by email.
+  Project user can subscribe issue, so let's check data with giving the access rights of user.
+-
+  !context
+    uid: 'res_users_project_issue_user'
+-
+  In Order to test process of  Issue in OpenERP, Customer send the issue by email.
 -
   !python {model: mail.thread}: |
     from openerp import addons
