--- a/addons/project_issue/test/issue_demo.yml
+++ b/addons/project_issue/test/issue_demo.yml
@@ -1,4 +1,9 @@
 -
+  Test the whole create project issue with project user.
+-
+  !context
+    uid: 'res_users_project_issue_user'
+-
   !record {model: project.issue, id: project_task_1, view: False}:
    task_id: 'project.project_task_17'
    name: 'Error in account module'
