--- a/addons/project_issue/test/issue_process.yml
+++ b/addons/project_issue/test/issue_process.yml
@@ -1,4 +1,9 @@
 -
+  Project user can subscribe issue, so let's check data with giving the access rights of user.
+-
+  !context
+    uid: 'res_users_project_issue_user'
+-
   In order to test process of issue tracking in OpenERP, I Open the Issue.
 -
   !python {model: project.issue}: |
@@ -41,10 +46,20 @@
   !assert {model: project.issue, id: crm_case_buginaccountsmodule0, severity: error, string: Issue should be in open state}:
     - state == 'open'   
 -
+  Only project manager can create Task for Issue, so let's check data with giving the access rights of manager.
+-
+  !context
+    uid: 'res_users_project_issue_manager'
+-
   I create Task for Issue.
 -
   !python {model: project.issue}: |
     self.convert_issue_task(cr, uid, [ref("crm_case_buginaccountsmodule0")])
+-
+  After resolving Issue Project user can close issue, so let's check data with giving the access rights of user.
+-
+  !context
+    uid: 'res_users_project_issue_user'
 -
   I close Issue after resolving it
 -
