[IMP] give access rights in yml of sale_stock
bzr revid: fka@tinyerp.com-20130314133750-r034ygbcna6l49m6

--- a/addons/sale_stock/test/sale_order_onchange.yml
+++ b/addons/sale_stock/test/sale_order_onchange.yml
@@ -1,4 +1,9 @@
 -
+  In sale order to test process of onchange of Sale Order with access rights of salemanager,
+-
+  !context
+    uid: 'res_sale_stock_salesmanager'
+-
   In order to test the onchange of the Sale Order, I create a product
 -
   !record {model: product.product, id: product_onchange1}:
