--- a/addons/sale_stock/test/sale_order_onchange.yml
+++ b/addons/sale_stock/test/sale_order_onchange.yml
@@ -1,5 +1,5 @@
 -
-  In sale order to test process of onchange of Sale Order with access rights of salemanager,
+  Only sales manager Creates product so let's check with access rights of salemanager.
 -
   !context
     uid: 'res_sale_stock_salesmanager'
@@ -10,6 +10,11 @@
     name: 'Devil Worship Book'
     list_price: 66.6
     procure_method: 'make_to_order'
+-
+  In sale order to test process of onchange of Sale Order with access rights of saleman.
+-
+  !context
+    uid: 'res_sale_stock_salesman'
 -
   Now i create a sale order that uses my new product
 -
