[IMP] improve yml strings
bzr revid: fka@tinyerp.com-20130318055412-se3c890mlckxd8ty

--- a/addons/sale/test/cancel_order.yml
+++ b/addons/sale/test/cancel_order.yml
@@ -1,5 +1,5 @@
 -
-  Salesman can also cancel order therfore test with that user which have salesman rights,
+  Salesman can also cancel order therefore test with that user which have salesman rights,
 -
   !context
     uid: 'res_users_salesman'
