--- a/addons/sale/test/delete_order.yml
+++ b/addons/sale/test/delete_order.yml
@@ -1,5 +1,5 @@
 -
-  Sales manager can only delete order therfore test with that user which have sales manager rights,
+  Sales manager can only delete order therefore test with that user which have sales manager rights,
 -
   !context
     uid: 'res_users_salesmanager'
