--- a/addons/project_issue/test/issue_users.yml
+++ b/addons/project_issue/test/issue_users.yml
@@ -1,20 +1,22 @@
 -
   Create a user as 'Project manager'
 -
+  !context
+    default_groups_ref: ['project.group_project_manager']
+-
   !record {model: res.users, id: res_users_project_issue_manager}:
     company_id: base.main_company
     name: Project Manager
     login: prim
     password: prim
-    groups_id:
-      - project.group_project_manager
 -
   Create a user as 'Project user'
+-
+  !context
+    default_groups_ref: ['project.group_project_user']
 -
   !record {model: res.users, id: res_users_project_issue_user}:
     company_id: base.main_company
     name: Project User
     login: priu
     password: priu
-    groups_id:
-      - project.group_project_user
