--- a/addons/hr/test/hr_users.yml
+++ b/addons/hr/test/hr_users.yml
@@ -1,30 +1,33 @@
 -
   Create a user as 'HR Manager'
 -
+  !context
+    default_groups_ref: [base.group_hr_manager]
+-
   !record {model: res.users, id: res_users_hr_manager}:
     company_id: base.main_company
     name: HR manager
     login: hrm
     password: hrm
-    groups_id:
-      - base.group_hr_manager
 -
   Create a user as 'HR Officer'
+-
+  !context
+    default_groups_ref: [base.group_hr_user]
 -
   !record {model: res.users, id: res_users_hr_officer}:
     company_id: base.main_company
     name: HR Officer
     login: hro
     password: hro
-    groups_id:
-      - base.group_hr_user
 -
   Create a user as 'Employee'
+-
+  !context
+    default_groups_ref: [base.group_user]
 -
   !record {model: res.users, id: res_users_employee}:
     company_id: base.main_company
     name: Employee
     login: emp
     password: emp
-    groups_id:
-      - base.group_user
