--- a/addons/hr_recruitment/test/recruitment_process.yml
+++ b/addons/hr_recruitment/test/recruitment_process.yml
@@ -1,13 +1,14 @@
 -
   Create a user as 'HR Recruitment Officer'
 -
+  !context
+    default_groups_ref: [base.group_hr_user]
+-
   !record {model: res.users, id: res_users_hr_officer}:
     company_id: base.main_company
     name: HR Officer
     login: hrro
     password: hrro
-    groups_id:
-      - base.group_hr_user
 -
   In Order to test process of Recruitment so giving HR officer's rights,
 -
