--- a/addons/hr_attendance/test/attendance_process.yml
+++ b/addons/hr_attendance/test/attendance_process.yml
@@ -1,13 +1,14 @@
 -
   Create a user as 'HR Attendance Officer'
 -
+  !context
+    default_groups_ref: [base.group_hr_user]
+-
   !record {model: res.users, id: res_users_attendance_officer}:
     company_id: base.main_company
     name: HR Officer
     login: ao
     password: ao
-    groups_id:
-      - base.group_hr_user
 -
   Give the access rights of Hr Officer to test attendance process.
 -
