--- a/addons/account_voucher/test/account_voucher_users.yml
+++ b/addons/account_voucher/test/account_voucher_users.yml
@@ -1,20 +1,22 @@
 -
    Create a user as 'Accountant for voucher'
 -
+  !context
+    default_groups_ref: [account.group_account_user]
+-
   !record {model: res.users, id: res_users_account_voucher_user}:
     company_id: base.main_company
     name: Voucher Accountant  
     login: vacc
     password: acc
-    groups_id:
-      - account.group_account_user
 -
    Create a user as 'Financial Manager for account voucher'
+-
+  !context
+    default_groups_ref: [account.group_account_manager]
 -
   !record {model: res.users, id: res_users_account_voucher_manager}:
     company_id: base.main_company
     name: Financial Manager for voucher
     login: fmv
     password: fmv
-    groups_id:
-      - account.group_account_manager
