[IMP] add user group in context in all yml files
bzr revid: fka@tinyerp.com-20130319112621-ohy33bgzwmtmw8kl

--- a/addons/mrp_repair/test/mrp_repair_users.yml
+++ b/addons/mrp_repair/test/mrp_repair_users.yml
@@ -1,20 +1,22 @@
 -
    Create a user as 'MRP Repair Manager'
 -
+  !context
+    default_groups_ref: [mrp.group_mrp_manager]
+-
   !record {model: res.users, id: res_mrp_repair_manager}:
     company_id: base.main_company
     name: MRP Manager
     login: marm
     password: marm
-    groups_id:
-      - mrp.group_mrp_manager
 -
    Create a user as 'MRP Repair User'
+-
+  !context
+    default_groups_ref: [mrp.group_mrp_user]
 -
   !record {model: res.users, id: res_mrp_repair_user}:
     company_id: base.main_company
     name: MRP User
     login: maru
     password: maru
-    groups_id:
-      - mrp.group_mrp_user
