--- a/addons/mrp/test/mrp_users.yml
+++ b/addons/mrp/test/mrp_users.yml
@@ -1,20 +1,22 @@
 -
    Create a user as 'MRP Manager'
 -
+  !context
+    default_groups_ref: [mrp.group_mrp_manager]
+-
   !record {model: res.users, id: res_users_mrp_manager}:
     company_id: base.main_company
     name: MRP Manager
     login: mam
     password: mam
-    groups_id:
-      - mrp.group_mrp_manager
 -
    Create a user as 'MRP User'
+-
+  !context
+    default_groups_ref: [mrp.group_mrp_user]
 -
   !record {model: res.users, id: res_users_mrp_user}:
     company_id: base.main_company
     name: MRP User
     login: mau
     password: mau
-    groups_id:
-      - mrp.group_mrp_user
