--- a/addons/purchase/test/ui/purchase_users.yml
+++ b/addons/purchase/test/ui/purchase_users.yml
@@ -1,20 +1,22 @@
 -
   Create a user as 'Purchase manager'
 -
+  !context
+    default_groups_ref: ['purchase.group_purchase_manager']
+-
   !record {model: res.users, id: res_users_purchase_manager}:
     company_id: base.main_company
     name: Purchase Manager
     login: pm
     password: pm
-    groups_id:
-      - purchase.group_purchase_manager
 -
   Create a user as 'Purchase user'
+-
+  !context
+    default_groups_ref: ['purchase.group_purchase_user']
 -
   !record {model: res.users, id: res_users_purchase_user}:
     company_id: base.main_company
     name: Purchase User
     login: pu
     password: pu
-    groups_id:
-      - purchase.group_purchase_user
