--- a/addons/sale_stock/test/sale_stock_users.yml
+++ b/addons/sale_stock/test/sale_stock_users.yml
@@ -1,35 +1,41 @@
 -
    Create a user as 'Salesmanager'
 -
+  !context
+    default_groups_ref: ['base.group_sale_manager']
+-
   !record {model: res.users, id: res_sale_stock_salesmanager}:
     company_id: base.main_company
     name: Sales manager
     login: ssm
     password: ssm
-    groups_id:
-      - base.group_sale_manager
 -
    Create a user as 'Salesman'
+-
+  !context
+    default_groups_ref: ['base.group_sale_salesman_all_leads']
 -
   !record {model: res.users, id: res_sale_stock_salesman}:
     company_id: base.main_company
     name: Salesman
     login: ssu
     password: ssu
-    groups_id:
-      - base.group_sale_salesman_all_leads
 -
    Create a user as 'Stock User'
+-
+  !context
+    default_groups_ref: ['stock.group_stock_user']
 -
   !record {model: res.users, id: res_stock_user}:
     company_id: base.main_company
     name: Stock User
     login: sau
     password: sau
-    groups_id:
-      - stock.group_stock_user
 -
    Create a user as 'Stock Manager'
+-
+  !context
+    default_groups_ref: ['stock.group_stock_manager']
 -
   !record {model: res.users, id: res_stock_manager}:
     company_id: base.main_company
@@ -37,5 +43,3 @@
     login: sam
     password: sam
     email: admin@portal.example.com
-    groups_id:
-      - stock.group_stock_manager
