--- a/addons/stock/test/stock_users.yml
+++ b/addons/stock/test/stock_users.yml
@@ -1,20 +1,22 @@
 -
    Create a user as 'Stock Manager'
 -
+  !context
+    default_groups_ref: ['stock.group_stock_manager']
+-
   !record {model: res.users, id: res_users_stock_manager}:
     company_id: base.main_company
     name: Stock Manager
     login: sam
     password: sam
-    groups_id:
-      - stock.group_stock_manager
 -
    Create a user as 'Stock User'
+-
+  !context
+    default_groups_ref: ['stock.group_stock_user']
 -
   !record {model: res.users, id: res_users_stock_user}:
     company_id: base.main_company
     name: Stock User
     login: sau
     password: sau
-    groups_id:
-      - stock.group_stock_user
