[IMP]add email to user as per new improvement
bzr revid: sgo@tinyerp.com-20130320054049-4cr1a52dlpfw2lgf

--- a/addons/account/test/account_test_users.yml
+++ b/addons/account/test/account_test_users.yml
@@ -9,6 +9,7 @@
     name: Accountant  
     login: acc
     password: acc
+    email: accountuser@yourcompany.com
 -
    Create a user as 'Financial Manager'
 -
@@ -20,3 +21,4 @@
     name: Financial Manager
     login: fm
     password: fm
+    email: accountmanager@yourcompany.com
