--- a/addons/account_voucher/test/account_voucher_users.yml
+++ b/addons/account_voucher/test/account_voucher_users.yml
@@ -9,6 +9,7 @@
     name: Voucher Accountant  
     login: vacc
     password: acc
+    email: accountant@yourcompany.com
 -
    Create a user as 'Financial Manager for account voucher'
 -
@@ -20,3 +21,4 @@
     name: Financial Manager for voucher
     login: fmv
     password: fmv
+    email: finmanager@yourcompany.com
