--- a/addons/crm/test/ui/crm_access_group_users.yml
+++ b/addons/crm/test/ui/crm_access_group_users.yml
@@ -9,6 +9,7 @@
     name: Sales manager
     login: csm
     password: csm
+    email: crmmanager@yourcompany.com
 -
   Create a user as 'Salesman'
 -
@@ -20,3 +21,4 @@
     name: Salesman
     login: csu
     password: csu
+    email: crmuser@yourcompany.com
