--- a/addons/event/test/ui/event_users.yml
+++ b/addons/event/test/ui/event_users.yml
@@ -9,6 +9,7 @@
     name: Event manager
     login: em
     password: em
+    email: eventmanager@yourcompany.com
 -
   Create a user as 'Event user'
 -
@@ -20,3 +21,4 @@
     name: User
     login: eu
     password: eu
+    email: eventuser@yourcompany.com
