--- a/addons/hr_recruitment/test/recruitment_process.yml
+++ b/addons/hr_recruitment/test/recruitment_process.yml
@@ -9,6 +9,7 @@
     name: HR Officer
     login: hrro
     password: hrro
+    email: hrofcr@yourcompany.com
 -
   In Order to test process of Recruitment so giving HR officer's rights,
 -
