--- a/addons/mrp/test/mrp_users.yml
+++ b/addons/mrp/test/mrp_users.yml
@@ -9,6 +9,7 @@
     name: MRP Manager
     login: mam
     password: mam
+    email: mrp_manager@yourcompany.com
 -
    Create a user as 'MRP User'
 -
@@ -20,3 +21,4 @@
     name: MRP User
     login: mau
     password: mau
+    email: mrp_user@yourcompany.com
