--- a/addons/mrp_operations/test/workcenter_operations.yml
+++ b/addons/mrp_operations/test/workcenter_operations.yml
@@ -9,6 +9,7 @@
     name: MRP User
     login: maou
     password: maou
+    email: mrp_operation_user@yourcompany.com
 -
   In order to test mrp_operations with OpenERP, I refer created production order of PC Assemble SC349
   with routing - Manual Component's Assembly to test complete production process with respect of workcenter with giving access rights of MRP User.
