--- a/addons/mrp_repair/test/mrp_repair_users.yml
+++ b/addons/mrp_repair/test/mrp_repair_users.yml
@@ -9,6 +9,7 @@
     name: MRP Manager
     login: marm
     password: marm
+    email: mrp_repair_manager@yourcompany.com
 -
    Create a user as 'MRP Repair User'
 -
@@ -20,3 +21,4 @@
     name: MRP User
     login: maru
     password: maru
+    email: mrp_repair_user@yourcompany.com
