--- a/addons/project/test/project_users.yml
+++ b/addons/project/test/project_users.yml
@@ -9,6 +9,7 @@
     name: Project Manager
     login: prm
     password: prm
+    email: projectmanager@yourcompany.com
 -
   Create a user as 'Project user'
 -
@@ -20,3 +21,4 @@
     name: Project User
     login: pru
     password: pru
+    email: projectuser@yourcompany.com
