--- a/addons/project_issue/test/issue_users.yml
+++ b/addons/project_issue/test/issue_users.yml
@@ -9,6 +9,7 @@
     name: Project Manager
     login: prim
     password: prim
+    email: issuemanager@yourcompany.com
 -
   Create a user as 'Project user'
 -
@@ -20,3 +21,4 @@
     name: Project User
     login: priu
     password: priu
+    email: issueuser@yourcompany.com
