--- a/addons/purchase/test/ui/purchase_users.yml
+++ b/addons/purchase/test/ui/purchase_users.yml
@@ -9,6 +9,7 @@
     name: Purchase Manager
     login: pm
     password: pm
+    email: purchasemanager@yourcompany.com
 -
   Create a user as 'Purchase user'
 -
@@ -20,3 +21,4 @@
     name: Purchase User
     login: pu
     password: pu
+    email: purchaseuser@yourcompany.com
