--- a/addons/sale/test/create_sale_users.yml
+++ b/addons/sale/test/create_sale_users.yml
@@ -9,6 +9,7 @@
     name: Sales manager
     login: sm
     password: sm
+    email: salesmanager@yourcompany.com
 -
    Create a user as 'Salesman'
 -
@@ -20,3 +21,4 @@
     name: Salesman
     login: su
     password: su
+    email: salesman@yourcompany.com
