--- a/addons/stock/test/stock_users.yml
+++ b/addons/stock/test/stock_users.yml
@@ -9,6 +9,7 @@
     name: Stock Manager
     login: sam
     password: sam
+    email: stockmanager@yourcompany.com
 -
    Create a user as 'Stock User'
 -
@@ -20,3 +21,4 @@
     name: Stock User
     login: sau
     password: sau
+    email: stockuser@yourcompany.com
