--- a/addons/sale_stock/test/sale_stock_users.yml
+++ b/addons/sale_stock/test/sale_stock_users.yml
@@ -9,6 +9,7 @@
     name: Sales manager
     login: ssm
     password: ssm
+    email: ss_salesmanager@yourcompany.com
 -
    Create a user as 'Salesman'
 -
@@ -20,6 +21,7 @@
     name: Salesman
     login: ssu
     password: ssu
+    email: ss_salesman@yourcompany.com
 -
    Create a user as 'Stock User'
 -
@@ -31,6 +33,8 @@
     name: Stock User
     login: sau
     password: sau
+    email: stock_user@yourcompany.com
+    
 -
    Create a user as 'Stock Manager'
 -
@@ -43,3 +47,4 @@
     login: sam
     password: sam
     email: admin@portal.example.com
+    email: stock_manager@yourcompany.com
