--- a/addons/hr_evaluation/test/test_hr_evaluation.yml
+++ b/addons/hr_evaluation/test/test_hr_evaluation.yml
@@ -42,7 +42,6 @@
   Give answer of the first page in "Employee Evaluation" survey.
 -
   !python {model: survey.question.wiz}: |
-    name_wiz_obj = self.pool.get('survey.name.wiz')
     interview_obj = self.pool.get('hr.evaluation.interview')
     interview_ids = interview_obj.search(cr, uid, [('evaluation_id','=', ref('hr_evaluation_evaluation_0'))])
     assert len(interview_ids), "Interview evaluation survey not created"
@@ -50,9 +49,8 @@
     assert interview_data.response_id.state != 'new', 'Response should be in new state'
     response_id = interview_data.response_id.id
     ctx = {'survey_id': ref("survey_2"), 'response_id': response_id}
-    name_id = name_wiz_obj.create(cr, uid, {'survey_id': ref("survey_2"), 'response_id': response_id }, context = ctx)
-    ctx["sur_name_id"] = name_id
-    self.create(cr, uid, {str(ref("survey_question_2")) +"_" +str(ref("survey_answer_1")) + "_multi" :'tpa',
+    self.create(cr, uid, {'survey_id': ref("survey_2"),
+               str(ref("survey_question_2")) +"_" +str(ref("survey_answer_1")) + "_multi" :'tpa',
                str(ref("survey_question_2")) +"_" +str(ref("survey_answer_10")) + "_multi" :'application eng',
                str(ref("survey_question_2")) +"_" +str(ref("survey_answer_20")) + "_multi" :'3',
                str(ref("survey_question_2")) +"_" +str(ref("survey_answer_25")) + "_multi" :'2011-12-02 16:42:00',
