[IMP]: stock: Improved shipment.yml for split lot problem for stock manager
bzr revid: rpa@tinyerp.com-20130329153403-n85d6kwk6edrplor

--- a/addons/stock/stock_demo.yml
+++ b/addons/stock/stock_demo.yml
@@ -44,7 +44,7 @@
     valuation: real_time
     cost_method: average
     property_stock_account_input: account.conf_o_income
-    property_stock_account_output: account.conf_o_expense
+    property_stock_account_output: account.a_expense
 -
   Stock user can handled production lot,inventory and picking, so let's check data with giving the access rights of user
 -
