[IMP]add string in shipment yml
bzr revid: sgo@tinyerp.com-20130401064359-40s1a4azsvd2099v

--- a/addons/stock/test/shipment.yml
+++ b/addons/stock/test/shipment.yml
@@ -1,4 +1,6 @@
 -
+   Stock manager can only test whole process related to Shipment, so let's check data with stock manager.
+-
   !context
     uid: 'res_users_stock_manager'
 -
